--- a/windev/src/index.css
+++ b/windev/src/index.css
@@ -8,7 +8,7 @@
 /* for my switch toggle darkmode */
 .form-check-input {
   position: absolute;
-  left: -9999px;
+  left: -9999px; 
 }
 
 .form-check-label {
@@ -35,6 +35,20 @@
 .moon-image {
   right: 0;
 }
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.rotating {
+  animation: rotate 10s linear infinite; 
+}
+
+
 
 
 
